@@ -310,8 +310,10 @@ module ActiveScaffold
 
       def active_scaffold_checkbox_option(option, label_method, associated_ids, checkbox_options, li_options = {})
         content_tag(:li, li_options) do
-          check_box_tag(checkbox_options[:name], option.id, associated_ids.include?(option.id), checkbox_options) <<
-            content_tag(:label, option.send(label_method), :for => checkbox_options[:id])
+          option_id = option.is_a?(Array) ? option[1] : option.id
+          label = option.is_a?(Array) ? option[0] : option.send(label_method)
+          check_box_tag(checkbox_options[:name], option_id, associated_ids.include?(option_id), checkbox_options) <<
+            content_tag(:label, label, :for => checkbox_options[:id])
         end
       end
 
